--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
                 о&nbsp;доступных программах и&nbsp;городах, в&nbsp;которых можете пройти программу.</p>
               <div class="grant__image">
                 <picture>
-                  <!-- <source type="image/webp" media="(max-width: 767px)"
+                  <source type="image/webp" media="(max-width: 767px)"
                     srcset="./img/grant/pillar-mobile.webp 1x, ./img/grant/pillar-mobile@2x.webp 2x">
                   <source type="image/webp" media="(max-width: 1199px)"
                     srcset="./img/grant/pillar-tablet.webp 1x, ./img/grant/pillar-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="./img/grant/pillar.webp 1x, ./img/grant/pillar@2x.webp 2x"> -->
+                  <source type="image/webp" srcset="./img/grant/pillar.webp 1x, ./img/grant/pillar@2x.webp 2x">
 
                   <source media="(max-width: 767px)"
                     srcset="./img/grant/pillar-mobile.png 1x, ./img/grant/pillar-mobile@2x.png 2x">
