Добавляет ПП проекта

--- a/source/index.html
+++ b/source/index.html
@@ -488,7 +488,7 @@
                   </div>
                 </div>
               </li>
-              <li class="news-card news-card--career swiper-slide" tabindex="0" id="career">
+              <li class="news-card news-card--career swiper-slide" tabindex="0">
                 <div class="news-card__wrapper">
                   <div class="news-card__date">
                     <span>10/03/2023</span>
@@ -514,7 +514,7 @@
                   </div>
                 </div>
               </li>
-              <li class="news-card news-card--career swiper-slide" tabindex="0" id="career">
+              <li class="news-card news-card--career swiper-slide" tabindex="0">
                 <div class="news-card__wrapper">
                   <div class="news-card__date">
                     <span>10/03/2023</span>
@@ -540,7 +540,7 @@
                   </div>
                 </div>
               </li>
-              <li class="news-card news-card--career swiper-slide" tabindex="0" id="career">
+              <li class="news-card news-card--career swiper-slide" tabindex="0">
                 <div class="news-card__wrapper">
                   <div class="news-card__date">
                     <span>10/03/2023</span>
@@ -656,7 +656,7 @@
                   <button class="question__button" type="button">
                     <span class="question__sign"></span>
                   </button>
-                  <h3>Признаётся&nbsp;ли учеба в&nbsp;рамках проекта для&nbsp;дальнейшего обучения?</h3>
+                  <h3>Признаётся&nbsp;ли учеба в&nbsp;рамках проекта&nbsp;для дальнейшего обучения?</h3>
                   <div class="question__content" data-accordion="content">
                     <p>Полная стоимость определяется организаторами в&nbsp;зависимости от&nbsp;направления.
                       В&nbsp;большинстве случаев грант &laquo;Маса&raquo; не&nbsp;покрывает полную стоимость программы,
@@ -716,7 +716,7 @@
                   <h3>Я&nbsp;могу с&nbsp;уверенностью сказать, что это был один из&nbsp;самых незабываемых опытов&nbsp;в
                     жизни!</h3>
                   <p>Я&nbsp;рекомендую программу &laquo;Маса&raquo; всем израильским студентам, желающим получить
-                    незабываемые впечатления. Сочетание путешествий, общения и&nbsp;значимой работы действительно
+                    незабываемые впечатления.&nbsp;Сочетание&nbsp;путешествий, общения и&nbsp;значимой работы действительно
                     отличает её&nbsp;от&nbsp;других программ, и&nbsp;я&nbsp;чувствую огромную благодарность
                     за&nbsp;предоставленную мне возможность.</p>
                 </div>
